<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/query_settings_search_term_default"
        android:inputType="textWebEditText"
        android:key="@string/query_settings_search_term_key"
        android:selectAllOnFocus="true"
        android:title="@string/query_settings_search_term_label" />
    <ListPreference
        android:defaultValue="@string/query_settings_order_by_default"
        android:entries="@array/query_settings_order_by_labels"
        android:entryValues="@array/query_settings_order_by_values"
        android:key="@string/query_settings_order_by_key"
        android:title="@string/query_settings_order_by_label" />
    <ListPreference
        android:defaultValue="@string/query_settings_page_size_default"
        android:entries="@array/query_settings_page_size_labels"
        android:entryValues="@array/query_settings_page_size_values"
        android:key="@string/query_settings_page_size_key"
        android:title="@string/query_settings_page_size_label" />

</PreferenceScreen>